_add_proto_cc_lib(_modules_proto_cc_lib)

add_subdirectory(common/vehicle_model)
add_subdirectory(drivers/canbus/can_client/socket)
add_subdirectory(common/filters)
add_subdirectory(drivers/canbus)
add_subdirectory(localization/common)
add_subdirectory(drivers/canbus/can_client/peak)
add_subdirectory(common/time)
add_subdirectory(common/adapters)
add_subdirectory(common/math/qp_solver)
add_subdirectory(common/kv_db)
add_subdirectory(common/monitor_log)
add_subdirectory(drivers/canbus/can_client)
add_subdirectory(common/util)
add_subdirectory(common/latency_recorder)
add_subdirectory(common/configs)
add_subdirectory(drivers/canbus/common)
add_subdirectory(common/vehicle_state)
add_subdirectory(common/math)
add_subdirectory(drivers/canbus/can_client/fake)
